fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,9 @@ nav {
 }
 
 .wrapper-main {
-  height: 100%;
+  flex-grow: 1;
   display: flex;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* SIDEBAR */
